<resources>
        <string name="app_name">AloMe</string>
        <string name="title_home">Home</string>
        <string name="title_dashboard">Dashboard</string>
        <string name="title_notifications">Notifications</string>
        <string name="abc_action_bar_home_description">Navigate home</string>
        <string name="abc_action_bar_up_description">Navigate up</string>
        <string name="abc_action_menu_overflow_description">More options</string>
        <string name="abc_action_mode_done">Done</string>
        <string name="abc_activity_chooser_view_see_all">See all</string>
        <string name="abc_activitychooserview_choose_application">Choose an app</string>
        <string name="abc_capital_off">OFF</string>
        <string name="abc_capital_on">ON</string>
        <string name="abc_font_family_body_1_material">sans-serif</string>
        <string name="abc_font_family_body_2_material">sans-serif-medium</string>
        <string name="abc_font_family_button_material">sans-serif-medium</string>
        <string name="abc_font_family_caption_material">sans-serif</string>
        <string name="abc_font_family_display_1_material">sans-serif</string>
        <string name="abc_font_family_display_2_material">sans-serif</string>
        <string name="abc_font_family_display_3_material">sans-serif</string>
        <string name="abc_font_family_display_4_material">sans-serif-light</string>
        <string name="abc_font_family_headline_material">sans-serif</string>
        <string name="abc_font_family_menu_material">sans-serif</string>
        <string name="abc_font_family_subhead_material">sans-serif</string>
        <string name="abc_font_family_title_material">sans-serif-medium</string>
        <string name="abc_menu_alt_shortcut_label">Alt+</string>
        <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
        <string name="abc_menu_delete_shortcut_label">delete</string>
        <string name="abc_menu_enter_shortcut_label">enter</string>
        <string name="abc_menu_function_shortcut_label">Function+</string>
        <string name="abc_menu_meta_shortcut_label">Meta+</string>
        <string name="abc_menu_shift_shortcut_label">Shift+</string>
        <string name="abc_menu_space_shortcut_label">space</string>
        <string name="abc_menu_sym_shortcut_label">Sym+</string>
        <string name="abc_prepend_shortcut_label">Menu+</string>
        <string name="abc_search_hint">Search…</string>
        <string name="abc_searchview_description_clear">Clear query</string>
        <string name="abc_searchview_description_query">Search query</string>
        <string name="abc_searchview_description_search">Search</string>
        <string name="abc_searchview_description_submit">Submit query</string>
        <string name="abc_searchview_description_voice">Voice search</string>
        <string name="abc_shareactionprovider_share_with">Share with</string>
        <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
        <string name="abc_toolbar_collapse_description">Collapse</string>
        <string name="about_us_page_can_not_open_email">Can not open email.</string>
        <string name="about_us_page_contact_text">Contact Fixzy</string>
        <string name="about_us_page_copyright_text">Fixzy version %1$s\10© 2014 Fixzy co.,Ltd Rights Reserved</string>
        <string name="about_us_page_fanpage_text">FIXZY App</string>
        <string name="about_us_page_have_not_already_install_line_app">You have not already install Line application.</string>
        <string name="about_us_page_line_text">Line App</string>
        <string name="about_us_page_policy_text">Terms of Use</string>
        <string name="about_us_page_rate_app_text">Rate this app</string>
        <string name="about_us_page_support_text">support@fixzy.net</string>
        <string name="about_us_page_term_text">Privacy Policy</string>
        <string name="about_us_page_title">About</string>
        <string name="about_us_page_web_text">Fixzy.net</string>
        <string name="active_notification_page_title">Notifications</string>
        <string name="add_address_page_address_text">* If can not select an address, please a nearby point.</string>
        <string name="add_address_page_alley_text">Alley/Road</string>
        <string name="add_address_page_condo_text">Condominium</string>
        <string name="add_address_page_district_text">District/Area</string>
        <string name="add_address_page_edit_map_btn">Edit map</string>
        <string name="add_address_page_house_number_text">House No</string>
        <string name="add_address_page_house_text">House</string>
        <string name="add_address_page_landmark_text">Landmark</string>
        <string name="add_address_page_office_text">Office</string>
        <string name="add_address_page_other_text">Etc.</string>
        <string name="add_address_page_property_type_text">Type of area</string>
        <string name="add_address_page_province_text">Province</string>
        <string name="add_address_page_save_btn">Save</string>
        <string name="add_address_page_title">Add Address</string>
        <string name="add_address_page_validate_address_text">* Please enter nearby point.</string>
        <string name="add_address_page_validate_alley_text">* Please enter alley/road.</string>
        <string name="add_address_page_validate_district_text">* Please enter district/area.</string>
        <string name="add_address_page_validate_house_number_text">* Please enter house no.</string>
        <string name="add_address_page_validate_property_type_text">* Please select area type.</string>
        <string name="add_address_page_validate_province_text">* Please enter province.</string>
        <string name="add_address_page_village_text">Village/Building</string>
        <string name="add_property_add_btn">Add</string>
        <string name="add_property_page_property_code_text">Verification code</string>
        <string name="add_property_page_title">Add account</string>
        <string name="add_property_validate_empty_property_code_text">* Please enter verification code.</string>
        <string name="add_property_validate_least_characters_property_code_text">* Your verification code is invalid.</string>
        <string name="address_list_page_add_address_btn">+ Add Address</string>
        <string name="address_list_page_add_address_title">Address</string>
        <string name="address_list_page_condo_text">Condominium</string>
        <string name="address_list_page_house_text">House</string>
        <string name="address_list_page_office_text">Office</string>
        <string name="address_list_page_other_text">Etc.</string>
        <string name="address_list_page_select_btn">Select</string>
        <string name="address_list_page_title">Select Address</string>
        <string name="address_list_page_validate_select_address_text">Please select area type</string>
        <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
        <string name="authentication_failed">Authentication Failed.</string>
        <string name="available_date_page_next_btn">Next week &gt;</string>
        <string name="available_date_page_previous_btn">&lt; Previous week</string>
        <string name="available_date_page_title">Choose a Available Date</string>
        <string name="available_time_page_title">Choose a Available Time</string>
        <string name="bank_page_select_btn">Select</string>
        <string name="bank_page_title">Bank Transfer</string>
        <string name="banner_detail_page_title">Details</string>
        <string name="banner_detail_page_view_detail_btn">View Detail</string>
        <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
        <string name="change_password_page_confirm_btn">ยืินยัน</string>
        <string name="change_password_page_confirm_password_text">Comfirm New Password</string>
        <string name="change_password_page_current_password_text">Current Password</string>
        <string name="change_password_page_new_password_text">New Password</string>
        <string name="change_password_page_title">Change Password</string>
        <string name="change_password_page_validate_confirm_password_text">* Password do not match</string>
        <string name="change_password_page_validate_current_password_text">* Password is incorrect</string>
        <string name="change_password_page_validate_new_password_text">* Password must be at least 6 characters</string>
        <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
        <string name="character_counter_pattern">%1$d / %2$d</string>
        <string name="chat_page_enter_text">Enter a message</string>
        <string name="chat_page_read_text">Read</string>
        <string name="chat_page_send_btn">Send</string>
        <string name="chat_page_title">Chat</string>
        <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
        <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
        <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
        <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
        <string name="com_facebook_like_button_liked">Liked</string>
        <string name="com_facebook_like_button_not_liked">Like</string>
        <string name="com_facebook_loading">Loading…</string>
        <string name="com_facebook_loginview_cancel_action">Cancel</string>
        <string name="com_facebook_loginview_log_in_button">Log in</string>
        <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
        <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
        <string name="com_facebook_loginview_log_out_action">Log out</string>
        <string name="com_facebook_loginview_log_out_button">Log out</string>
        <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
        <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
        <string name="com_facebook_send_button_text">Send</string>
        <string name="com_facebook_share_button_text">Share</string>
        <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
        <string name="com_facebook_smart_device_instructions_or">- OR -</string>
        <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
        <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
        <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
        <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
        <string name="common_google_play_services_enable_button">Enable</string>
        <string name="landing_page_facebook_login">Log in with Facebook</string>
        <string name="landing_page_google_login">Log in with Google</string>
        <string name="landing_page_login_register_btn">Log in / Register</string>
        <string name="landing_page_or_text">or</string>
        <string name="profile_page_name_text">First - Last Name</string>
        <string name="sign_in_password">Password</string>
        <string name="signin_signup_page_register_text">Register</string>
        <string name="signup_page_confirm_password_text">Re-enter Password</string>
        <string name="signup_page_email_text">Email</string>
</resources>