<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/thaisansneue_bold"
        android:text="AloMe"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/txtAppName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dotsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHeight_percent="0.58"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dotsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/viewPager"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewPager"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAppName"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dotsLayout">

        <Button
            android:id="@+id/btnFacebookSignIn"
            style="@style/FacebookButtonStyle"
            android:text="@string/landing_page_facebook_login" />

        <Button
            android:id="@+id/btnGoogleSignIn"
            style="@style/GoogleButtonStyle"
            android:layout_marginTop="@dimen/padding_12"
            android:text="@string/landing_page_google_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_weight="1"
                android:background="@drawable/available_date_time_recycler_view_divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_marginRight="@dimen/padding_8"
                android:fontFamily="@font/thaisansneue_regular"
                android:text="@string/landing_page_or_text"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/text_size_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_weight="1"
                android:background="@drawable/available_date_time_recycler_view_divider" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignInSignUp"
            style="@style/SignInSignUpButtonStyle"
            android:layout_marginLeft="@dimen/padding_24"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginRight="@dimen/padding_24"
            android:layout_marginBottom="@dimen/padding_16"
            android:text="@string/landing_page_login_register_btn" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>